--- a/src/components/demo/Expenses/ExpenseItem.css
+++ b/src/components/demo/Expenses/ExpenseItem.css
@@ -5,6 +5,7 @@
     padding: 0.5rem;
     margin: 1rem 0;
     background-color: #4b4b4b;
+    text-align: center;
 }
 
 .expense-item__description {
@@ -29,7 +30,7 @@
     font-size: 1rem;
     font-weight: bold;
     color: white;
-    background-color: #40005d;
+    background-color: var(--primary);
     border: 1px solid white;
     padding: 0.5rem;
     border-radius: 12px;
