--- a/src/components/demo/NewExpense/NewExpense.css
+++ b/src/components/demo/NewExpense/NewExpense.css
@@ -13,8 +13,8 @@
     font: inherit;
     cursor: pointer;
     padding: 1rem 2rem;
-    border: 1px solid #40005d;
-    background-color: #40005d;
+    border: 1px solid var(--primary);
+    background-color: var(--primary);
     color: white;
     border-radius: 12px;
     margin-right: 1rem;
@@ -22,8 +22,8 @@
 
 .new-expense button:hover,
 .new-expense button:active {
-    background-color: #510674;
-    border-color: #510674;
+    background-color: grey;
+    border-color: grey;
 }
 
 .new-expense button.alternative {
