--- a/src/components/demo/Expenses/ExpenseItemContainer.css
+++ b/src/components/demo/Expenses/ExpenseItemContainer.css
@@ -1,6 +1,6 @@
 .expense-item-container {
     padding: 1rem;
-    background-color: rgb(31, 31, 31);
+    background-color: lightgray;
     margin: 2rem auto;
     width: 50rem;
     max-width: 95%;
