--- a/src/components/demo/NewExpense/NewExpense.css
+++ b/src/components/demo/NewExpense/NewExpense.css
@@ -1,5 +1,5 @@
 .new-expense {
-    background-color: #a892ee;
+    background-color: lightgray;
     padding: 1rem;
     margin: 2rem auto;
     width: 50rem;
@@ -13,8 +13,8 @@
     font: inherit;
     cursor: pointer;
     padding: 1rem 2rem;
-    border: 1px solid var(--primary);
-    background-color: var(--primary);
+    border: 1px solid grey;
+    background-color: grey;
     color: white;
     border-radius: 12px;
     margin-right: 1rem;
@@ -22,8 +22,8 @@
 
 .new-expense button:hover,
 .new-expense button:active {
-    background-color: grey;
-    border-color: grey;
+    background-color: var(--primary);
+    border-color: var(--primary);
 }
 
 .new-expense button.alternative {
