--- a/src/components/PortfolioBox.css
+++ b/src/components/PortfolioBox.css
@@ -34,7 +34,7 @@
   #portfolio .container-fluid .portfolio-box:hover .portfolio-box-caption, #portfolio .container-sm .portfolio-box:hover .portfolio-box-caption, #portfolio .container-md .portfolio-box:hover .portfolio-box-caption, #portfolio .container-lg .portfolio-box:hover .portfolio-box-caption, #portfolio .container-xl .portfolio-box:hover .portfolio-box-caption {
     opacity: 1;
   }
-  .row > *:first-child {
-    margin-left: 0;
-    margin-top: 0;
+  .row > *{
+    padding-right: 0;
+    padding-left: 0;
   }
